--- a/dukeLife/Base.lproj/Main.storyboard
+++ b/dukeLife/Base.lproj/Main.storyboard
@@ -1833,7 +1833,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="GPk-7g-Src"/>
+        <segue reference="W76-zX-n7M"/>
         <segue reference="79s-OR-zwl"/>
         <segue reference="yHN-yd-Pa1"/>
         <segue reference="FUw-Ed-bFr"/>
